fix the zoom icon to stick it more to the right on mobile

--- a/web-app/src/components/Polaroid/Polaroid.scss
+++ b/web-app/src/components/Polaroid/Polaroid.scss
@@ -42,8 +42,8 @@
 .Polaroid__ZoomIcon {
   position: absolute;
   width: 25px;
-  right: 40px;
-  top: 40px;
+  right: 10%;
+  top: 13%;
 
   cursor: pointer;
 }
